--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,14 @@ body {
 
     &:hover {
         background-color: #0CB387;
-
     }
+}
+
+.error {
+    text-align: center;
+    padding: 1.5rem;
+    border-radius: 1rem;
+    background-color: #e65a5a;
+    text-transform: uppercase;
+    font-size: 1.6rem;
 }
